--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@
   position: relative;
   pointer-events: none;
 }
+.pricing-container {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
 
 
 .projects_animations::before,
@@ -202,6 +207,14 @@ ul {
     height: 22pc;
     width: 27pc;
   }
+  /* .pricing-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #51bb73;
+  } */
+  .h1-home{
+    font-size: 50px;
+  }
 }
 
 @media only screen and (max-width: 860px){
@@ -220,6 +233,10 @@ ul {
   .skill-icon {
     margin-right: 0;
     margin-bottom: 0;
+  }
+  .pricing-container {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -257,6 +274,9 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .h1-home{
+    font-size: 26px;
   }
 }
 
